--- a/src/app/shopping/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping/shopping-edit/shopping-edit.component.html
@@ -1,21 +1,26 @@
 <div class="row">
   <div class="col-xs-12">
-    <form>
+    <form (ngSubmit)="onAddItem(f)" #f="ngForm">
       <div class="row">
         <div class="col-xs-5 form-group">
           <label for="name">Name</label>
-          <input type="text" id="name" class="form-control" #nameInput>
+          <input type="text" id="name" class="form-control" name="name"
+                 ngModel required="">
         </div>
         <div class="col-xs-3 form-group">
           <label for="amount">Amount</label>
-          <input type="number" id="amount" class="form-control" #amountInput>
+          <input type="number" id="amount"
+                 class="form-control"
+                 name="amount" ngModel
+                 required
+                [pattern]="'^[1-9]+[0-9]*$'">
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <button class="btn btn-success" type="submit" (click)="addIngredient()">Add</button>
-          <button class="btn btn-danger" type="submit">Delete</button>
-          <button class="btn btn-info" type="submit">Clear</button>
+          <button class="btn btn-success" type="submit" [disabled]="!f.valid">{{ editMode ? 'Update':'add'}}</button>
+          <button class="btn btn-danger" type="button" (click)="deleteIngredient()" *ngIf="editMode">Delete</button>
+          <button class="btn btn-info" type="button" (click)="onClear()">Clear</button>
         </div>
       </div>
     </form>
